# mmlsqlite

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: parse.h
src/: CMakeLists.txt  main.c  parse.c
tests/: CMakeLists.txt  testopen.c
